--- a/src/main/resources/static/sysadmin.html
+++ b/src/main/resources/static/sysadmin.html
@@ -9,5 +9,7 @@
 </head>
 <body style="background-color: #e9ebee;">
 	<h1>STRANICA ZA ADMINA</h1>
+	<button type="button" class="btn btn-primary">Create certificate</button>
+	<button type="button" class="btn btn-primary">Show all certificates</button>
 </body>
 </html>
