--- a/src/main/resources/static/sysadmin.html
+++ b/src/main/resources/static/sysadmin.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
 
 
-<meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
-<title>Secure XML</title>
-
-</head>
+		<meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
+		
+		<title>Secure XML</title>
+		
+		<script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.1/dist/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.1/dist/css/bootstrap.min.css">
+		<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/additional-methods.min.js"></script>
+		<link rel="stylesheet" href="/css/validation/screen.css">
+		
+		<script src="js/sysadmin.js"></script>
+		
+		</head>
 <body style="background-color: #e9ebee;">
 	<h1>STRANICA ZA ADMINA</h1>
-	<button type="button" class="btn btn-primary">Create certificate</button>
-	<button type="button" class="btn btn-primary">Show all certificates</button>
+	<a type="button" class="btn btn-primary" id="create_cer">Create certificate</a>
+	<button type="button" class="btn btn-primary" id="show_all">Show all certificates</button>
 </body>
 </html>
