copy paste bugfix

--- a/src/main/resources/static/createcertificate.html
+++ b/src/main/resources/static/createcertificate.html
@@ -14,7 +14,7 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/additional-methods.min.js"></script>
 <link rel="stylesheet" href="/css/validation/screen.css">
 
-<script src="js/index.js"></script>
+<script src="js/createcertificate.js"></script>
 
 </head>
 <body style="background-color: #e9ebee;">
