--- a/src/main/resources/static/sysadmin.html
+++ b/src/main/resources/static/sysadmin.html
@@ -19,7 +19,7 @@
 		</head>
 <body style="background-color: #e9ebee;">
 	<h1>STRANICA ZA ADMINA</h1>
-	<a type="button" class="btn btn-primary" id="create_cer">Create certificate</a>
+	<button type="button" class="btn btn-primary" id="create_cer">Create certificate</button>
 	<button type="button" class="btn btn-primary" id="show_all">Show all certificates</button>
 </body>
 </html>
