--- a/src/main/resources/static/createcertificate.html
+++ b/src/main/resources/static/createcertificate.html
@@ -24,20 +24,20 @@
 		<div class="row">
 			<div class="col-md-3"></div>
 			<div class="col-md-6">
-				<form>
+				<form name="formcreate">
 					<h3>Create certificate</h3>
 					<div class="row">
 						<div class="col-md-5">
 							<div class="form-group">
 								<label>Country name*</label>
-								<input type="text" class="form-control" placeholder="Enter country" required>
+								<input id="country" type="text" class="form-control" placeholder="Enter country" required>
 							</div>
 						</div>
 						<div class="col-md-2"></div>
 						<div class="col-md-5">
 							<div class="form-group">
 								<label>State or province name*</label>
-								<input type="text" class="form-control" placeholder="Enter state or province name" required>
+								<input id="state" type="text" class="form-control" placeholder="Enter state or province name" required>
 							</div>
 						</div>
 					</div>
@@ -45,14 +45,14 @@
 						<div class="col-md-5">
 							<div class="form-group">
 								<label>Locality name*</label>
-								<input type="text" class="form-control" placeholder="Enter locality name" required>
+								<input id="locality" type="text" class="form-control" placeholder="Enter locality name" required>
 							</div>
 						</div>
 						<div class="col-md-2"></div>
 						<div class="col-md-5">
 							<div class="form-group">
 								<label>Organization name*</label>
-								<input type="text" class="form-control" placeholder="Enter organization name" required>
+								<input id="organization" type="text" class="form-control" placeholder="Enter organization name" required>
 							</div>
 						</div>
 					</div>
@@ -60,14 +60,14 @@
 						<div class="col-md-5">
 							<div class="form-group">
 								<label>Organizational unit name*</label>
-								<input type="text" class="form-control" placeholder="Enter organizational unit name" required>
+								<input id="orgunit" type="text" class="form-control" placeholder="Enter organizational unit name" required>
 							</div>
 						</div>
 						<div class="col-md-2"></div>
 						<div class="col-md-5">
 							<div class="form-group">
 								<label>Common name*</label>
-								<input type="text" class="form-control" placeholder="Enter common name" required>
+								<input id="common" type="text" class="form-control" placeholder="Enter common name" required>
 							</div>
 						</div>
 					</div>
@@ -75,7 +75,7 @@
 						<div class="col-md-5">
 							<div class="form-group">
 								<label>Email address*</label>
-								<input type="email" class="form-control" placeholder="Enter email" required>
+								<input id="email" type="email" class="form-control" placeholder="Enter email" required>
 							</div>
 						</div>
 					</div>
@@ -83,14 +83,14 @@
 						<div class="col-md-5">
 							<div class="form-group">
 								<label>A challenge password</label>
-								<input type="password" class="form-control" placeholder="This field is optional">
+								<input id="password" type="password" class="form-control" placeholder="This field is optional">
 							</div>
 						</div>
 						<div class="col-md-2"></div>
 						<div class="col-md-5">
 							<div class="form-group">
 								<label>An optional company name</label>
-								<input type="text" class="form-control" placeholder="This field is optional">
+								<input id="company" type="text" class="form-control" placeholder="This field is optional">
 							</div>
 						</div>
 					</div>
@@ -100,14 +100,14 @@
 								<label>Key*</label>
 								<button>Generate key</button>
 								</br>
-								<textarea placeholder="Input or generate key" rows="10" cols="90" required></textarea>
+								<textarea placeholder="Input or generate key" rows="10" cols="90" required id="keyfield"></textarea>
 							</div>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-5"></div>
 						<div class="col-md-2">
-							<input type="submit" value="Submit">
+							<input type="submit" value="Create" id="submitcreate">
 						</div>
 						<div class="col-md-5"></div>
 					</div>
