ca and requests

--- a/src/main/resources/static/createcertificate.html
+++ b/src/main/resources/static/createcertificate.html
@@ -114,9 +114,10 @@
 					<div class="row" style="background:black;height:1px"></div>
 					</br>
 					<h3>Choose issuer</h3>
+					</br>
 					<div class="row">
 						<div class="col-md-2">
-							Self signed
+							<h5>Self signed</h5>
 						</div>
 						<div class="col-md-1">
 							<input type="checkbox" name="selfsigned" id="selfsigned">
@@ -126,13 +127,28 @@
 					<div class="row" id="choose_issuer">
 						<div class="col-md-12">
 							<select name="issuerselect">
-							  <option value="volvo">Volvo volvo volvo</option>
-							  <option value="saab">Saab</option>
-							  <option value="fiat">Fiat</option>
-							  <option value="audi">Audi</option>
+							  <option value="1">Volvo volvo volvo</option>
+							  <option value="2">Saab</option>
+							  <option value="3">Fiat</option>
+							  <option value="4">Audi</option>
 							</select>
 						</div>
 					</div>
+					</br>
+					<div class="row" style="background:black;height:1px"></div>
+					</br>
+					<div class="row">
+						<div class="col-md-2">
+							<h5>Certificate authority</h5>
+						</div>
+						<div class="col-md-1">
+							<input type="checkbox" name="ca" id="ca">
+						</div>
+						<div class="col-md-9"></div>
+					</div>
+					</br>
+					<div class="row" style="background:black;height:1px"></div>
+					</br>
 					<div class="row">
 						<div class="col-md-5"></div>
 						<div class="col-md-2">
