--- a/src/main/resources/static/showAllCertificates.html
+++ b/src/main/resources/static/showAllCertificates.html
@@ -18,6 +18,41 @@
 		
 		</head>
 <body style="background-color: #e9ebee;">
-	all cert
+	<div>
+		<div class="row">
+			<div class="col-md-1"></div>
+			<div class="col-md-10">
+				<h2>All certificates</h2>
+				<table  class="table table-striped">
+					<th>
+						<td><b>ID</b></td>
+						<td><b>Subject data</b></td>
+						<td><b>Issuer data</b></td>
+						<td><b>Start date</b></td>
+						<td><b>End date</b></td>
+						<td><b>CA</b></td>
+						<td><b>Is valid?</b></td>
+						<td><b>Revoke</b></td>
+						<td><b>Get publlic key</b></td>
+						<td><b>Get private key</b></td>
+					</th>
+					<tr>
+						<td></td>
+						<td>1</td>
+						<td>asdf</td>
+						<td>qwer</td>
+						<td>12.21.2012</td>
+						<td>16.11.2019</td>
+						<td>yes</td>
+						<td>yes</td>
+						<td>Revoke</td>
+						<td><button type="button" class="btn btn-primary" id="show_all">Show all certificates</button></td>
+						<td><button type="button" class="btn btn-primary" id="show_all">Show all certificates</button></td>
+					</tr>
+				</table>
+			</div>
+			<div class="col-md-1"></div>
+		</div>
+	</div>
 </body>
 </html>
