--- a/src/main/resources/static/createcertificate.html
+++ b/src/main/resources/static/createcertificate.html
@@ -25,7 +25,7 @@
 			<div class="col-md-3"></div>
 			<div class="col-md-6">
 				<form name="formcreate" id="formcr">
-					<h3>Create certificate</h3>
+					<h3>Create certificate (key will be created automatically)</h3>
 					<div class="row">
 						<div class="col-md-5">
 							<div class="form-group">
