--- a/src/main/resources/static/showAllCertificates.html
+++ b/src/main/resources/static/showAllCertificates.html
@@ -33,21 +33,34 @@
 						<td><b>CA</b></td>
 						<td><b>Is valid?</b></td>
 						<td><b>Revoke</b></td>
-						<td><b>Get publlic key</b></td>
-						<td><b>Get private key</b></td>
+						<td><b>Publlic key</b></td>
+						<td><b>Private key</b></td>
 					</th>
 					<tr>
 						<td></td>
-						<td>1</td>
+						<td><b>1</b></td>
 						<td>asdf</td>
 						<td>qwer</td>
 						<td>12.21.2012</td>
 						<td>16.11.2019</td>
 						<td>yes</td>
 						<td>yes</td>
-						<td>Revoke</td>
-						<td><button type="button" class="btn btn-primary" id="show_all">Show all certificates</button></td>
-						<td><button type="button" class="btn btn-primary" id="show_all">Show all certificates</button></td>
+						<td><button type="button" class="btn btn-primary" id="revoke">Revoke</button></td>
+						<td><button type="button" class="btn btn-primary" id="get_public">Get key</button></td>
+						<td><button type="button" class="btn btn-primary" id="get_private">Get key</button></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td><b>1</b></td>
+						<td>asdf</td>
+						<td>qwer</td>
+						<td>12.21.2012</td>
+						<td>16.11.2019</td>
+						<td>yes</td>
+						<td>yes</td>
+						<td><button type="button" class="btn btn-primary" id="revoke">Revoke</button></td>
+						<td><button type="button" class="btn btn-primary" id="get_public">Get key</button></td>
+						<td><button type="button" class="btn btn-primary" id="get_private">Get key</button></td>
 					</tr>
 				</table>
 			</div>
