list certificate issuers

--- a/src/main/resources/static/createcertificate.html
+++ b/src/main/resources/static/createcertificate.html
@@ -111,11 +111,7 @@
 					</div>
 					<div class="row" id="choose_issuer">
 						<div class="col-md-12">
-							<select name="issuerselect">
-							  <option value="1">Volvo volvo volvo</option>
-							  <option value="2">Saab</option>
-							  <option value="3">Fiat</option>
-							  <option value="4">Audi</option>
+							<select name="issuerselect" id="issuerselectid">
 							</select>
 						</div>
 					</div>
