revoke modal, db fix

--- a/src/main/resources/static/createcertificate.html
+++ b/src/main/resources/static/createcertificate.html
@@ -100,9 +100,9 @@
 					</br>
 					<h3>Choose issuer</h3>
 					</br>
-					<div class="row">
+					<div class="row" id="selfsignedrow">
 						<div class="col-md-2">
-							<h5>Self signed</h5>
+							<h5>Self signed (root)</h5>
 						</div>
 						<div class="col-md-1">
 							<input type="checkbox" name="selfsigned" id="selfsigned">
