--- a/src/main/resources/static/showAllCertificates.html
+++ b/src/main/resources/static/showAllCertificates.html
@@ -41,5 +41,25 @@
 			<div class="col-md-1"></div>
 		</div>
 	</div>
+	<!-- REVOKE -->
+	<div class="modal fade" id="revokeModal">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+
+				<div class="modal-header">
+					<h4 class="modal-title">Revoke certificate</h4>
+					<button type="button" class="close" data-dismiss="modal">×</button>
+				</div>
+				<div class="modal-body">
+					<div class="form-group">
+						<label>Revoke reason</label>
+						<input id="reason" type="text" class="form-control" placeholder="Enter revoke reason" required>
+					</div>
+				</div>
+				<div class="modal-footer" id="modalFooter">
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
