--- a/src/main/resources/static/showAllCertificates.html
+++ b/src/main/resources/static/showAllCertificates.html
@@ -31,7 +31,7 @@
 						<td><b>Start date</b></td>
 						<td><b>End date</b></td>
 						<td><b>CA</b></td>
-						<td><b>Is valid?</b></td>
+						<td><b>Is revoked?</b></td>
 						<td><b>Revoke</b></td>
 						<td><b>Publlic key</b></td>
 						<td><b>Private key</b></td>
