--- a/src/main/resources/static/showAllCertificates.html
+++ b/src/main/resources/static/showAllCertificates.html
@@ -34,9 +34,10 @@
 						<td><b>Is revoked?</b></td>
 						<td><b>Revoke</b></td>
 						<td><b>Publlic key</b></td>
-						<td><b>Private key</b></td>
+						<td><b>Save to new keystore</b></td>
 					</th>
 				</table>
+				<button type="button" class="btn btn-primary" onclick="createKeystore()">Create keystore</button>
 			</div>
 			<div class="col-md-1"></div>
 		</div>
