new keystore name and pass

--- a/src/main/resources/static/showAllCertificates.html
+++ b/src/main/resources/static/showAllCertificates.html
@@ -37,7 +37,7 @@
 						<td><b>Save to new keystore</b></td>
 					</th>
 				</table>
-				<button type="button" class="btn btn-primary" onclick="createKeystore()">Create keystore</button>
+				<button type="button" class="btn btn-primary" data-toggle="modal" href="#keystoreModal"">Create keystore</button>
 			</div>
 			<div class="col-md-1"></div>
 		</div>
@@ -58,6 +58,30 @@
 					</div>
 				</div>
 				<div class="modal-footer" id="modalFooter">
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- CREATE KEYSTORE -->
+	<div class="modal fade" id="keystoreModal">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+
+				<div class="modal-header">
+					<h4 class="modal-title">New keystore</h4>
+					<button type="button" class="close" data-dismiss="modal">×</button>
+				</div>
+				<div class="modal-body">
+					<div class="form-group">
+						<label>Keystore name</label>
+						<input id="keystorename" type="text" class="form-control" placeholder="Enter keystore name" required>
+						<label>Password</label>
+						<input id="keystorepass" type="password" class="form-control" placeholder="Enter password" required>
+					</div>
+				</div>
+				<div class="modal-footer" id="modalFooter">
+					<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+					<button class="btn btn-primary" onclick="createKeystore()">Create</button>
 				</div>
 			</div>
 		</div>
