fix stabla, preuzimanje sertifikata

--- a/src/main/resources/static/tree.html
+++ b/src/main/resources/static/tree.html
@@ -26,7 +26,8 @@
 	href="https://cdn.jsdelivr.net/npm/vis@4.21.0/dist/vis-network.min.css">
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/vis@4.21.0/dist/vis.min.css">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 
 </head>
 <body style="background-color: #e9ebee;">
