preuzimanje .crt sertifikata i keystore-a

--- a/src/main/resources/static/tree.html
+++ b/src/main/resources/static/tree.html
@@ -14,8 +14,6 @@
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.1/dist/css/bootstrap.min.css">
 
-<script src="js/sysadmin.js"></script>
-
 <script src="js/tree.js"></script>
 
 <script
@@ -97,6 +95,7 @@
 
 				<div class="modal-footer">
 					<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-success" id="downBtn">Download</button>
 				</div>
 
 			</div>
