nav bar i odjava sa sistema

--- a/src/main/resources/static/createcertificate.html
+++ b/src/main/resources/static/createcertificate.html
@@ -18,6 +18,19 @@
 
 </head>
 <body style="background-color: #e9ebee;">
+	
+	<nav class="navbar navbar-default navbar-expand-sm bg-dark navbar-dark fixed-top logged-out-navbar">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a style="color:gray;" class="navbar-brand">Mega travel</a>
+	       </div>
+	    <ul class="nav navbar-nav navbar-right">
+	      <li><button id="logoutlink" data-toggle="modal" class="btn btn-primary loggedIn">Odjavi se</button></li>
+	    </ul>
+	  </div>
+	</nav>	
+	
+	</br>
 	</br>
 	</br>
 	<div>
