--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,15 +19,18 @@
 </head>
 <body style="background-color: #e9ebee;">
 
-	<nav
-		class="navbar navbar-default navbar-expand-sm bg-dark navbar-dark fixed-top logged-out-navbar">
-		<ul class="navbar-nav">
-			<li class="nav-item">
-				<button id="registerlink" id="refModalShow" data-toggle="modal" href="#registerModal" class="btn btn-primary">Registruj se</button>
-				<button id="loginlink" data-toggle="modal" href="#loginModal" class="btn btn-primary">Prijavi se</button>
-			</li>
-		</ul>
-	</nav>
+	<nav class="navbar navbar-default navbar-expand-sm bg-dark navbar-dark fixed-top logged-out-navbar">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+		    <a style="color:gray;" class="navbar-brand">Mega travel</a>
+	    </div>
+	    <ul class="nav navbar-nav navbar-right">
+	      <li><button id="registerlink" id="refModalShow" data-toggle="modal" href="#registerModal" class="btn btn-primary notLoggedIn">Registruj se</button></li>
+		  <li><button id="loginlink" data-toggle="modal" href="#loginModal" class="btn btn-primary notLoggedIn">Prijavi se</button></li>
+	      <li><button id="logoutlink" data-toggle="modal" class="btn btn-primary loggedIn">Odjavi se</button></li>
+	    </ul>
+	  </div>
+	</nav>		
 	
 	<div id="page" class="container-fluid">
 	
