--- a/src/main/resources/static/sysadmin.html
+++ b/src/main/resources/static/sysadmin.html
@@ -16,10 +16,25 @@
 		
 		<script src="js/sysadmin.js"></script>
 		
-		</head>
-<body style="background-color: #e9ebee;">
-	<h1>STRANICA ZA ADMINA</h1>
-	<button type="button" class="btn btn-primary" id="create_cer">Create certificate</button>
-	<button type="button" class="btn btn-primary" id="show_all">Show all certificates</button>
-</body>
+	</head>
+
+	<body style="background-color: #e9ebee;">
+	
+		<nav class="navbar navbar-default navbar-expand-sm bg-dark navbar-dark fixed-top logged-out-navbar">
+		  <div class="container-fluid">
+		    <div class="navbar-header">
+		      <a style="color:gray;" class="navbar-brand">Mega travel</a>
+		       </div>
+		    <ul class="nav navbar-nav navbar-right">
+		      <li><button id="logoutlink" data-toggle="modal" class="btn btn-primary loggedIn">Odjavi se</button></li>
+		    </ul>
+		  </div>
+		</nav>	
+			
+		<h1>&nbsp;</h1>
+		<h1>STRANICA ZA ADMINA</h1>
+		<button type="button" class="btn btn-primary" id="create_cer">Create certificate</button>
+		<button type="button" class="btn btn-primary" id="show_all">Show all certificates</button>
+		
+	</body>
 </html>
