--- a/src/main/resources/static/sysadmin.html
+++ b/src/main/resources/static/sysadmin.html
@@ -32,9 +32,10 @@
 		</nav>	
 			
 		<h1>&nbsp;</h1>
-		<h1>STRANICA ZA ADMINA</h1>
+		<h1>ADMIN PAGE</h1>
 		<button type="button" class="btn btn-primary" id="create_cer">Create certificate</button>
 		<button type="button" class="btn btn-primary" id="show_all">Show all certificates</button>
+		<button type="button" class="btn btn-primary" id="show_tree">Show tree</button>
 		
 	</body>
 </html>
