--- a/src/main/resources/static/tree.html
+++ b/src/main/resources/static/tree.html
@@ -29,6 +29,16 @@
 
 </head>
 <body style="background-color: #e9ebee;">
+	<nav class="navbar navbar-default navbar-expand-sm bg-dark navbar-dark fixed-top logged-out-navbar">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a style="color:gray;" class="navbar-brand">Mega travel</a>
+	       </div>
+	    <ul class="nav navbar-nav navbar-right">
+	      <li><button id="logoutlink" data-toggle="modal" class="btn btn-primary loggedIn">Odjavi se</button></li>
+	    </ul>
+	  </div>
+	</nav>
 	<div id="nodes"></div>
 	<button id="showNodeModal" hidden data-toggle="modal" href="#nodeModal"></button>
 	<div class="modal fade" id="nodeModal">
