--- a/src/main/resources/static/createcertificate.html
+++ b/src/main/resources/static/createcertificate.html
@@ -21,14 +21,18 @@
 	
 	<nav class="navbar navbar-default navbar-expand-sm bg-dark navbar-dark fixed-top logged-out-navbar">
 	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <a style="color:gray;" class="navbar-brand">Mega travel</a>
-	       </div>
+	    
+	    <ul class="nav navbar-nav navbar-left">
+	    	<a style="color:gray;" class="navbar-brand">Mega travel</a>
+	      	<li><button type="button" class="btn btn-primary" id="create_cer">Create certificate</button></li>
+			<li><button type="button" class="btn btn-primary" id="show_all">Show all certificates</button></li>
+			<li><button type="button" class="btn btn-primary" id="show_tree">Show tree</button></li>
+	    </ul>
 	    <ul class="nav navbar-nav navbar-right">
-	      <li><button id="logoutlink" data-toggle="modal" class="btn btn-primary loggedIn">Odjavi se</button></li>
+	      <li><button id="logoutlink" data-toggle="modal" class="btn btn-primary loggedIn">Sign out</button></li>
 	    </ul>
 	  </div>
-	</nav>	
+	</nav>
 	
 	</br>
 	</br>
